FIN section2 page REALISATION

--- a/css/screen.css
+++ b/css/screen.css
@@ -2500,6 +2500,7 @@ footer .l-footer .section__footer--right .btn--footer {
   /* PC portable xlg 1360px */
   /* PC portable xxlg 1420px */
   /* PC  xtlg  1920px */
+  /* PC  xxtlg  2300px */
 }
 .m-wrap.realisation p {
   color: #033752;
@@ -2628,8 +2629,6 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap.realisation .coverimage2middle {
     position: relative;
-    /* left: 1.9rem;
-    bottom: 15rem; */
     width: 80%;
     padding-left: 5rem;
     left: 3.9rem;
@@ -2646,7 +2645,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap.realisation .coverimage2middle {
     left: 1.3rem;
-    bottom: 9rem;
+    bottom: 12.5rem;
   }
   .m-wrap.realisation .backimage-second2left {
     width: 118%;
@@ -2657,10 +2656,16 @@ footer .l-footer .section__footer--right .btn--footer {
     left: 0rem;
     top: 16rem;
   }
+  .m-wrap.realisation .backimage2 {
+    width: 108%;
+  }
   .m-wrap.realisation .coverrelatif-second2left img {
     top: 9rem;
     left: 1rem;
     width: 75%;
+  }
+  .m-wrap.realisation .coverrelatif2 > img {
+    width: 109%;
   }
 }
 @media screen and (min-width: 600px) {
@@ -2679,8 +2684,8 @@ footer .l-footer .section__footer--right .btn--footer {
     bottom: 12rem;
   }
   .m-wrap.realisation .coverimage2middle {
-    left: 1.9rem;
-    bottom: 11.7rem;
+    left: 1.6rem;
+    bottom: 12.8rem;
   }
   .m-wrap.realisation .coverrelatif {
     left: 6.1rem;
@@ -2701,14 +2706,12 @@ footer .l-footer .section__footer--right .btn--footer {
     position: relative;
     left: -2.1rem;
     bottom: -1.7rem;
-    border: 1px solid red;
     width: 15%;
   }
   .m-wrap.realisation .coverrelatif-ter {
     position: absolute;
     left: -0.4rem;
     bottom: -20.2rem;
-    /* border: 1px solid orange;*/
   }
   .m-wrap.realisation .coverimage-ter {
     display: block;
@@ -2783,15 +2786,12 @@ footer .l-footer .section__footer--right .btn--footer {
     max-width: 68%;
   }
   .m-wrap.realisation .coverrelatif-second {
-    /*position: relative;
-    left: -2.1rem;
-    bottom: -1.7rem;
-    border: 1px solid red;
-    width: 15%;*/
     display: none;
   }
   .m-wrap.realisation .coverrelatif-second2right {
-    width: 70%;
+    width: 48%;
+    left: 4.9rem;
+    bottom: -14.7rem;
   }
   .m-wrap.realisation .coverrelatif-ter {
     position: absolute;
@@ -2813,11 +2813,22 @@ footer .l-footer .section__footer--right .btn--footer {
     left: -1.1rem;
     top: 17rem;
   }
+  .m-wrap.realisation .backimage-second2right > img {
+    max-width: 88%;
+    margin-left: 3.1rem;
+    margin-top: 10rem;
+    padding-left: 0.5rem;
+  }
   .m-wrap.realisation .backimage2 {
     width: 100%;
   }
   .m-wrap.realisation .backimage2 > img {
     margin-top: -0.6rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 20rem;
+    left: 1.3rem;
+    width: 56%;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -2837,15 +2848,48 @@ footer .l-footer .section__footer--right .btn--footer {
     width: 90%;
   }
   .m-wrap.realisation .coverimage2middle {
-    bottom: 11.5rem;
-    width: 79%;
-    left: 0rem;
+    bottom: 14.8rem;
+    width: 77%;
+    left: 2.3rem;
+  }
+  .m-wrap.realisation .backimage-second2right > img {
+    margin-top: 5rem;
+    margin-left: 4.1rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 8.9rem;
+  }
+  .m-wrap.realisation .backimage-second2left > img {
+    top: 20rem;
+    left: -2rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 8.1rem;
+    left: 1.8rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .m-wrap.realisation .coverrelatif {
     left: 7.5rem;
     bottom: -4.2rem;
+  }
+  .m-wrap.realisation .backimage-second {
+    padding-left: 0.8rem;
+    margin-left: 1.6rem;
+    margin-top: -13rem;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    bottom: 18.8rem;
+    width: 75%;
+    left: 3.3rem;
+  }
+  .m-wrap.realisation .backimage-second2right > img {
+    margin-top: 6rem;
+    margin-left: 7.1rem;
+    max-width: 75%;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 13.9rem;
   }
 }
 @media screen and (min-width: 1360px) {
@@ -2861,6 +2905,15 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverimage-ter {
     left: -9.7rem;
   }
+  .m-wrap.realisation .backimage-second {
+    padding-left: 0.8rem;
+    margin-left: 1.6rem;
+    margin-top: -8rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 14.9rem;
+    bottom: -15.7rem;
+  }
 }
 @media screen and (min-width: 1420px) {
   .m-wrap.realisation .title__primary2 {
@@ -2872,6 +2925,19 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap.realisation .coverrelatif img {
     max-width: 58%;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    bottom: 21.5rem;
+    width: 75%;
+    left: 3.3rem;
+  }
+  .m-wrap.realisation .backimage-second2right > img {
+    margin-top: 6rem;
+    margin-left: 11.1rem;
+    max-width: 71%;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 18.9rem;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -2892,6 +2958,44 @@ footer .l-footer .section__footer--right .btn--footer {
     left: 30rem;
     bottom: -7.2rem;
     max-width: 93%;
+  }
+  .m-wrap.realisation .coverrelatif2 > img {
+    width: 103%;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    bottom: 26.5rem;
+    width: 75%;
+    left: 6.3rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 21.9rem;
+    bottom: -20.7rem;
+    width: 57%;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 3.1rem;
+    left: 1.8rem;
+    width: 78%;
+  }
+  .m-wrap.realisation .backimage-second2left > img {
+    top: 23rem;
+  }
+}
+@media screen and (min-width: 2300px) {
+  .m-wrap.realisation .coverimage2middle {
+    bottom: 31.5rem;
+    width: 75%;
+    left: 8.3rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    left: 23.9rem;
+    bottom: -26.7rem;
+    width: 65%;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 3.1rem;
+    left: 4.8rem;
+    width: 86%;
   }
 }
 
@@ -2930,7 +3034,6 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
-  background: orange;
 }
 
 .item-2 {
@@ -2963,7 +3066,6 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
   margin-top: 19.9rem;
-  border: 3px solid yellow;
 }
 
 .item-4 {
@@ -2979,7 +3081,6 @@ footer .l-footer .section__footer--right .btn--footer {
   grid-row: 2/3;
   margin-bottom: 0.8rem;
   margin-top: 4rem;
-  border: 1px solid violet;
   padding-top: 4rem;
 }
 .item-24 p {
@@ -3007,7 +3108,6 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
-  border: 1px solid red;
 }
 
 .item-27 {
@@ -3059,7 +3159,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-24 {
-    grid-column: 5/7;
+    grid-column: 4/7;
     grid-row: 3/4;
     margin-top: 2.4rem;
   }
@@ -3109,7 +3209,7 @@ footer .l-footer .section__footer--right .btn--footer {
 
   .item-3 {
     grid-column: 5/7;
-    padding-bottom: 10.8rem;
+    padding-bottom: 5.8rem;
     margin-bottom: 1.1rem;
     margin-top: 1.4rem;
   }
@@ -3149,6 +3249,7 @@ footer .l-footer .section__footer--right .btn--footer {
 
   .item-22 {
     margin-top: 0.2rem;
+    margin-bottom: 8rem;
   }
 
   .item-23 {
@@ -3158,18 +3259,20 @@ footer .l-footer .section__footer--right .btn--footer {
 
   .item-24 {
     grid-row: 2/4;
-    margin-top: 14.7rem;
+    margin-top: 19.7rem;
     margin-left: 4rem;
-    grid-column: 5/7;
+    grid-column: 4/7;
   }
 
   .item-26 {
     grid-column: 1/3;
     grid-row: 2/6;
+    margin-top: 7.1rem;
   }
 
   .item-27 {
     grid-column: 4/7;
+    margin-top: 2.1rem;
   }
 }
 /* petit PC portable md-plus 799 */
@@ -3194,7 +3297,7 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-3 {
     grid-column: 5/7;
     grid-row: 4/5;
-    margin-bottom: 1.9rem;
+    margin-bottom: 0.7rem;
     z-index: 3;
     margin-left: 3.1rem;
   }
@@ -3202,7 +3305,7 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-4 {
     grid-column: 2/6;
     grid-row: 5/7;
-    margin-top: 1.9rem;
+    margin-top: 0.7rem;
     margin-bottom: -1.9rem;
     margin-right: 1.4rem;
     z-index: 6;
@@ -3233,14 +3336,14 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-22 {
-    border: 1px solid green;
     margin-right: -2rem;
   }
 
   .item-24 {
-    margin-top: 13.7rem;
-    grid-column: 4/6;
+    margin-top: 14.5rem;
+    grid-column: 3/6;
     margin-left: 2.6rem;
+    padding-right: 0.5rem;
   }
 
   .item-25 {
@@ -3249,7 +3352,8 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-row: 2/6;
     padding-top: 1.9rem;
     margin-bottom: 1.4rem;
-    border: 3px dashed darkcyan;
+    left: 2rem;
+    margin-left: 4rem;
   }
 
   .item-27 {
@@ -3263,7 +3367,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-22 {
-    grid-column: 2/4;
+    grid-column: 2/5;
     margin-bottom: 4.5rem;
   }
 
@@ -3273,12 +3377,19 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-24 {
-    grid-column: 5/6;
+    grid-column: 3/6;
+    margin-top: 15.5rem;
+    margin-bottom: 4rem;
+  }
+
+  .item-26 {
+    margin-top: 8.9rem;
   }
 
   .item-27 {
     grid-column: 3/6;
-    margin-left: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
 /* petit PC portable mlg 1280px */
@@ -3308,6 +3419,19 @@ footer .l-footer .section__footer--right .btn--footer {
 
   .item-6 {
     margin-top: 9rem;
+  }
+
+  .item-24 {
+    padding-right: 1.3rem;
+  }
+}
+@media screen and (min-width: 2300px) {
+  .item-6 {
+    margin-top: 13rem;
+  }
+
+  .item-24 {
+    padding-right: 7.3rem;
   }
 }
 .section__test {
