--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -31,7 +31,7 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
-  background: orange;
+  //background: orange;
 }
 
 .item-2 {
@@ -66,7 +66,7 @@
   margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
   margin-top: 19.9rem;
-  border: 3px solid yellow;
+  //border: 3px solid yellow;
 
 }
 
@@ -82,7 +82,7 @@
   grid-row: 2 / 3;
   margin-bottom: 0.8rem;
   margin-top: 4rem;
-  border: 1px solid violet;
+ // border: 1px solid violet;
   padding-top: 4rem;
     p{
       margin-top: 29rem;
@@ -108,7 +108,7 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
-  border: 1px solid red;
+ // border: 1px solid red;
  // background: lightgray;
 
 }
@@ -159,7 +159,7 @@
     margin-top: 1rem;
   }
   .item-24 {
-    grid-column: 5 / 7;
+    grid-column: 4 / 7;
     grid-row: 3 / 4;
     margin-top: 2.4rem;
 
@@ -211,7 +211,7 @@
 
   .item-3 {
     grid-column: 5 / 7;
-    padding-bottom: 10.8rem;
+    padding-bottom: 5.8rem;
     margin-bottom: 1.1rem;
     margin-top: 1.4rem;
 
@@ -223,6 +223,7 @@
     margin-bottom: 1rem;
     margin-top: 1.4rem;
   }
+
 
 }
 
@@ -253,6 +254,7 @@
   }
   .item-22{
     margin-top: 0.2rem;
+    margin-bottom: 8rem;
   }
 
   .item-23{
@@ -261,16 +263,18 @@
   }
   .item-24{
     grid-row: 2/4;
-    margin-top: 14.7rem;
+    margin-top: 19.7rem;
     margin-left: 4rem;
-    grid-column: 5/7;
+    grid-column: 4/7;
   }
   .item-26 {
     grid-column: 1/3;
     grid-row: 2/6;
+    margin-top: 7.1rem;
   }
   .item-27 {
     grid-column: 4/7;
+    margin-top: 2.1rem;
   }
 
 }
@@ -298,7 +302,7 @@
   .item-3 {
     grid-column: 5 / 7;
     grid-row: 4 / 5;
-    margin-bottom: 1.9rem;
+    margin-bottom: 0.7rem;
     z-index: 3;
     margin-left: 3.1rem;
   }
@@ -306,7 +310,7 @@
   .item-4 {
     grid-column: 2 / 6;
     grid-row: 5 / 7;
-    margin-top: 1.9rem;
+    margin-top: 0.7rem;
     margin-bottom: -1.9rem;
     margin-right: 1.4rem;
     z-index: 6;
@@ -338,23 +342,25 @@
     padding-right: 1rem;
   }
   .item-22{
-    border: 1px solid green;
+    //border: 1px solid green;
     margin-right: -2rem;
   }
   .item-24{
-    margin-top: 13.7rem;
-    grid-column: 4/6;
+    margin-top: 14.5rem;
+    grid-column: 3/6;
     margin-left: 2.6rem;
+    padding-right: 0.5rem;
   }
   .item-25{
     display: grid;
-    grid-column: 5 / 7;
-    grid-row: 2 / 6;
+    grid-column: 5/7;
+    grid-row: 2/6;
     padding-top: 1.9rem;
     margin-bottom: 1.4rem;
-    border: 3px dashed darkcyan;
-   // z-index: 6;
-    //background-color: green;
+    //border: 3px dashed darkcyan;
+    left: 2rem;
+    margin-left: 4rem;
+
   }
   .item-27{
     padding-left: 0.5rem;
@@ -368,7 +374,7 @@
     grid-column: 1 / 5;
   }
   .item-22 {
-    grid-column: 2 / 4;
+    grid-column: 2/5;
     margin-bottom: 4.5rem;
   }
   .item-23 {
@@ -376,12 +382,18 @@
     grid-row: 1 / 3;
   }
   .item-24 {
-    grid-column: 5 / 6;
+    grid-column: 3 / 6;
+    margin-top: 15.5rem;
+    margin-bottom: 4rem;
+  }
+  .item-26{
+    margin-top: 8.9rem;
   }
 
   .item-27 {
     grid-column: 3/6;
-    margin-left: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
 
@@ -411,6 +423,17 @@
   }
   .item-6{
     margin-top: 9rem;
+  }
+  .item-24{
+    padding-right: 1.3rem;
+  }
+}
+@media screen and (min-width: break-point(xxtlg)){
+  .item-6 {
+    margin-top: 13rem;
+  }
+  .item-24{
+    padding-right: 7.3rem;
   }
 }
 
