Mise en place IMAGE et BACKIMAGE section3

--- a/css/screen.css
+++ b/css/screen.css
@@ -2489,6 +2489,7 @@ footer .l-footer .section__footer--right .btn--footer {
 .m-wrap.realisation {
   width: 95%;
   margin: auto;
+  border: 1px solid green;
   /* version petit mobile xxxs 370px */
   /* version moyen mobile xxs 420px */
   /* version très petite tablette Surface Duo xx-s 530px */
@@ -2523,6 +2524,9 @@ footer .l-footer .section__footer--right .btn--footer {
   text-transform: capitalize;
   font-weight: 800;
 }
+.m-wrap.realisation .bordure {
+  border: 2px dotted darkorchid;
+}
 .m-wrap.realisation .backimage {
   padding-left: 0.6rem;
 }
@@ -2551,6 +2555,12 @@ footer .l-footer .section__footer--right .btn--footer {
   left: -2rem;
   top: 8rem;
 }
+.m-wrap.realisation .backimage-second3left img {
+  position: relative;
+  max-width: 100%;
+  left: -2rem;
+  top: 0rem;
+}
 .m-wrap.realisation .coverimage {
   position: relative;
   left: -2.1rem;
@@ -2562,6 +2572,13 @@ footer .l-footer .section__footer--right .btn--footer {
   position: relative;
   left: 2.4rem;
   bottom: 13rem;
+  width: 84%;
+  padding-left: 5rem;
+}
+.m-wrap.realisation .coverimage3middle {
+  position: relative;
+  left: 0.4rem;
+  bottom: 18rem;
   width: 84%;
   padding-left: 5rem;
 }
@@ -2588,6 +2605,12 @@ footer .l-footer .section__footer--right .btn--footer {
   position: relative;
   left: 2rem;
   top: -6rem;
+}
+.m-wrap.realisation .coverrelatif-second3left img {
+  max-width: 55%;
+  position: relative;
+  left: 2rem;
+  top: -16rem;
 }
 @media screen and (min-width: 370px) {
   .m-wrap.realisation .coverrelatif img {
@@ -3016,7 +3039,11 @@ footer .l-footer .section__footer--right .btn--footer {
   font-size: 1.2rem;
 }
 
-.grid-containerAmoi > *, .grid-containerAmoi2 {
+.grid-containerAmoi, .grid-containerAmoi2, .grid-containerAmoi3 {
+  padding-left: 0.8rem;
+}
+
+.grid-containerAmoi > *, .grid-containerAmoi2 > *, .grid-containerAmoi3 > * {
   padding-left: 0.8rem;
 }
 
@@ -3028,7 +3055,7 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 1.4rem;
 }
 
-.item-21 {
+.item-21, .item-31 {
   grid-column: 1/7;
   grid-row: 1/2;
   margin-bottom: 1.4rem;
@@ -3044,7 +3071,7 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 9.1rem;
 }
 
-.item-22 {
+.item-22, .item-32 {
   grid-column: 1/7;
   grid-row: 2/3;
   margin-bottom: 3.8rem;
@@ -3068,6 +3095,14 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 19.9rem;
 }
 
+.item-33 {
+  grid-column: 1/7;
+  grid-row: 2/2;
+  margin-bottom: 0.2rem;
+  padding-bottom: 0.8rem;
+  margin-top: 2.9rem;
+}
+
 .item-4 {
   grid-column: 2/7;
   grid-row: 7/8;
@@ -3087,11 +3122,15 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 29rem;
 }
 
-.item-5 {
-  display: none;
+.item-34 {
+  grid-column: 1/7;
+  grid-row: 2/3;
+  margin-bottom: 5.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: -11.1rem;
 }
 
-.item-25 {
+.item-5, .item-25, .item-35 {
   display: none;
 }
 
@@ -3102,12 +3141,13 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 5.4rem;
 }
 
-.item-26 {
+.item-26, item-36 {
   grid-column: 1/7;
   grid-row: 5/6;
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
+  background: lightgray;
 }
 
 .item-27 {
@@ -3116,6 +3156,13 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 30.9rem;
   margin-bottom: 4.5rem;
   z-index: 4;
+}
+
+.item-37 {
+  grid-column: 3/7;
+  grid-row: 5/6;
+  margin-top: 4.9rem;
+  margin-bottom: 4.5rem;
 }
 
 /* version moyen mobile xxs 420px */
@@ -3231,9 +3278,18 @@ footer .l-footer .section__footer--right .btn--footer {
     z-index: 2;
   }
 
+  .item-21 {
+    grid-column: 1/6;
+  }
+
   .item-2 {
     grid-column: 1/2;
     grid-row: 3/10;
+  }
+
+  .item-22 {
+    margin-top: 0.2rem;
+    margin-bottom: 8rem;
   }
 
   .item-3 {
@@ -3241,15 +3297,6 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-left: 2.6rem;
     padding-left: 1.4rem;
     z-index: 2;
-  }
-
-  .item-21 {
-    grid-column: 1/6;
-  }
-
-  .item-22 {
-    margin-top: 0.2rem;
-    margin-bottom: 8rem;
   }
 
   .item-23 {
@@ -3285,6 +3332,11 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-top: 1.4rem;
   }
 
+  .item-21 {
+    margin-right: 1rem;
+    padding-right: 1rem;
+  }
+
   .item-2 {
     grid-column: 1/2;
     grid-row: 3/10;
@@ -3292,6 +3344,10 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .item-2 p {
     padding: 10px;
+  }
+
+  .item-22 {
+    margin-right: -2rem;
   }
 
   .item-3 {
@@ -3311,6 +3367,13 @@ footer .l-footer .section__footer--right .btn--footer {
     z-index: 6;
   }
 
+  .item-24 {
+    margin-top: 14.5rem;
+    grid-column: 3/6;
+    margin-left: 2.6rem;
+    padding-right: 0.5rem;
+  }
+
   .item-5 {
     display: grid;
     grid-column: 6/7;
@@ -3323,29 +3386,6 @@ footer .l-footer .section__footer--right .btn--footer {
     font-size: 1rem;
   }
 
-  .item-6 {
-    grid-column: 4/7;
-    grid-row: 8/10;
-    margin-bottom: 10px;
-    z-index: 3;
-  }
-
-  .item-21 {
-    margin-right: 1rem;
-    padding-right: 1rem;
-  }
-
-  .item-22 {
-    margin-right: -2rem;
-  }
-
-  .item-24 {
-    margin-top: 14.5rem;
-    grid-column: 3/6;
-    margin-left: 2.6rem;
-    padding-right: 0.5rem;
-  }
-
   .item-25 {
     display: grid;
     grid-column: 5/7;
@@ -3354,6 +3394,13 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-bottom: 1.4rem;
     left: 2rem;
     margin-left: 4rem;
+  }
+
+  .item-6 {
+    grid-column: 4/7;
+    grid-row: 8/10;
+    margin-bottom: 10px;
+    z-index: 3;
   }
 
   .item-27 {
