--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -12,9 +12,13 @@
   grid-template-columns: 5% 20% 10% 15% 30% 20%;
   font-size: 1.2rem;
 }
-.grid-containerAmoi>*, .grid-containerAmoi2 {
+.grid-containerAmoi, .grid-containerAmoi2, .grid-containerAmoi3 {
   padding-left: 0.8rem;
 }
+.grid-containerAmoi > *, .grid-containerAmoi2 > *, .grid-containerAmoi3 > *{
+  padding-left: 0.8rem;
+}
+
 
 
 .item-1 {
@@ -25,13 +29,12 @@
   margin-top: 1.4rem;
   //background: orange;
 }
-.item-21 {
+.item-21, .item-31 {
   grid-column: 1 / 7;
   grid-row: 1 / 2;
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
-  //background: orange;
 }
 
 .item-2 {
@@ -40,16 +43,13 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 9.1rem;
- // background: lightgray;
- // border: yellowgreen;
 }
-.item-22 {
+.item-22,.item-32 {
   grid-column: 1 / 7;
   grid-row: 2 / 3;
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
   margin-top: 1.9rem;
-//  border-top: 3px solid yellow;
 }
 
 .item-3 {
@@ -58,7 +58,6 @@
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
   margin-top: 1.9rem;
-//  border-top: 3px solid yellow;
 }
 .item-23 {
   grid-column: 1 / 7;
@@ -66,8 +65,13 @@
   margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
   margin-top: 19.9rem;
-  //border: 3px solid yellow;
-
+}
+.item-33 {
+  grid-column: 1/7;
+  grid-row: 2/2;
+  margin-bottom: 0.2rem;
+  padding-bottom: 0.8rem;
+  margin-top: 2.9rem;
 }
 
 .item-4 {
@@ -88,13 +92,18 @@
       margin-top: 29rem;
     }
 }
+.item-34 {
+  grid-column: 1/7;
+  grid-row: 2/3;
+  margin-bottom: 5.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: -11.1rem;
+}
 
-.item-5 {
+.item-5,.item-25, .item-35 {
   display: none;
 }
-.item-25 {
-  display: none;
-}
+
 
 .item-6 {
   grid-column: 1 / 7;
@@ -102,16 +111,15 @@
   margin-bottom: 0.8rem;
   margin-top: 5.4rem;
 }
-.item-26 {
+.item-26, item-36 {
   grid-column: 1 / 7;
   grid-row: 5 / 6;
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
- // border: 1px solid red;
- // background: lightgray;
-
+  background: lightgray;
 }
+
 .item-27 {
   grid-column: 3 / 7;
     grid-row: 5 / 6;
@@ -119,6 +127,14 @@
     margin-bottom: 4.5rem;
   z-index: 4;
 }
+.item-37 {
+  grid-column: 3/7;
+  grid-row: 5/6;
+  margin-top: 4.9rem;
+  margin-bottom: 4.5rem;
+
+}
+
 
 /* version moyen mobile xxs 420px */
 @media screen and (min-width: break-point(xxs)){
@@ -207,6 +223,7 @@
   }
   .item-27 {
     margin-bottom: 0.5rem;
+
   }
 
   .item-3 {
@@ -235,11 +252,18 @@
   .item-1{
     z-index: 2;
   }
+  .item-21{
+    grid-column: 1 / 6;
+  }
 
   .item-2{
     grid-column: 1/2;
     grid-row: 3/10;
     //background-color: brown;
+  }
+  .item-22{
+    margin-top: 0.2rem;
+    margin-bottom: 8rem;
   }
 
   .item-3 {
@@ -247,14 +271,6 @@
     margin-left: 2.6rem;
     padding-left: 1.4rem;
     z-index: 2;
-  }
-
-  .item-21{
-    grid-column: 1 / 6;
-  }
-  .item-22{
-    margin-top: 0.2rem;
-    margin-bottom: 8rem;
   }
 
   .item-23{
@@ -275,6 +291,7 @@
   .item-27 {
     grid-column: 4/7;
     margin-top: 2.1rem;
+
   }
 
 }
@@ -286,17 +303,23 @@
     padding-bottom: 0.8rem;
     margin-bottom: 1rem;
     margin-top: 1.4rem;
-    //background: orange;
+  }
+  .item-21{
+    margin-right: 1rem;
+    padding-right: 1rem;
   }
 
   .item-2 {
     grid-column: 1/2;
     grid-row: 3/10;
     padding: 10px 0;
-   // background : lightgray;
+
     p{
       padding: 10px;
     }
+  }
+  .item-22{
+    margin-right: -2rem;
   }
 
   .item-3 {
@@ -314,7 +337,12 @@
     margin-bottom: -1.9rem;
     margin-right: 1.4rem;
     z-index: 6;
-    //background-color: blanchedalmond;
+  }
+  .item-24{
+    margin-top: 14.5rem;
+    grid-column: 3/6;
+    margin-left: 2.6rem;
+    padding-right: 0.5rem;
   }
 
   .item-5 {
@@ -324,10 +352,19 @@
     z-index: 6;
     padding-top: 1.9rem;
     margin-bottom: 1.4rem;
-    //background-color: green;
+
     p{
       font-size: 1rem;
     }
+  }
+  .item-25{
+    display: grid;
+    grid-column: 5/7;
+    grid-row: 2/6;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
+    left: 2rem;
+    margin-left: 4rem;
   }
 
   .item-6 {
@@ -337,34 +374,10 @@
     z-index: 3;
   }
 
-  .item-21{
-    margin-right: 1rem;
-    padding-right: 1rem;
-  }
-  .item-22{
-    //border: 1px solid green;
-    margin-right: -2rem;
-  }
-  .item-24{
-    margin-top: 14.5rem;
-    grid-column: 3/6;
-    margin-left: 2.6rem;
-    padding-right: 0.5rem;
-  }
-  .item-25{
-    display: grid;
-    grid-column: 5/7;
-    grid-row: 2/6;
-    padding-top: 1.9rem;
-    margin-bottom: 1.4rem;
-    //border: 3px dashed darkcyan;
-    left: 2rem;
-    margin-left: 4rem;
-
-  }
   .item-27{
     padding-left: 0.5rem;
   }
+
 
 }
 
