--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -3,6 +3,7 @@
 .m-wrap.realisation{
   width: 95%;
   margin: auto;
+  border: 1px solid green;
 
   p{
     color: color(primary);
@@ -28,6 +29,10 @@
   span {
     text-transform: capitalize;
     font-weight: 800;
+  }
+
+  .bordure{
+    border: 2px dotted darkorchid;
   }
   .backimage {
     padding-left: 0.6rem;
@@ -57,6 +62,12 @@
     left: -2rem;
     top: 8rem;
 }
+.backimage-second3left img {
+  position: relative;
+  max-width: 100%;
+  left: -2rem;
+  top: 0rem;
+}
 
   .coverimage {
     position: relative;
@@ -69,6 +80,13 @@
     position: relative;
     left: 2.4rem;
     bottom: 13rem;
+    width: 84%;
+    padding-left: 5rem;
+  }
+  .coverimage3middle {
+    position: relative;
+    left: 0.4rem;
+    bottom: 18rem;
     width: 84%;
     padding-left: 5rem;
   }
@@ -98,6 +116,12 @@
     position: relative;
     left: 2rem;
     top: -6rem;
+}
+.coverrelatif-second3left img {
+  max-width: 55%;
+  position: relative;
+  left: 2rem;
+  top: -16rem;
 }
 
 
@@ -345,7 +369,7 @@
       left: 20.2rem;
       bottom: -7.1rem;
       max-width: 152%;
-    // border: 1px solid yellow;
+
     }
     .coverrelatif-ter img {
       max-width: 100%;
@@ -396,7 +420,7 @@
         left: 22rem;
         bottom: -7.2rem;
         max-width: 100%;
-      //  border: 1px solid yellow;
+
     }
     .backimage2 {
       width: 90%;
