--- a/css/screen.css
+++ b/css/screen.css
@@ -2670,6 +2670,13 @@ footer .l-footer .section__footer--right .btn--footer {
     left: 1.3rem;
     bottom: 12.5rem;
   }
+  .m-wrap.realisation .coverimage3middle {
+    position: relative;
+    left: -0.6rem;
+    bottom: 19rem;
+    width: 89%;
+    padding-left: 6rem;
+  }
   .m-wrap.realisation .backimage-second2left {
     width: 118%;
   }
@@ -2679,13 +2686,28 @@ footer .l-footer .section__footer--right .btn--footer {
     left: 0rem;
     top: 16rem;
   }
+  .m-wrap.realisation .backimage-second3left img {
+    position: relative;
+    max-width: 98%;
+    left: -0.9rem;
+    top: 0rem;
+  }
   .m-wrap.realisation .backimage2 {
     width: 108%;
+  }
+  .m-wrap.realisation .backimage3 {
+    width: 70%;
   }
   .m-wrap.realisation .coverrelatif-second2left img {
     top: 9rem;
     left: 1rem;
     width: 75%;
+  }
+  .m-wrap.realisation .coverrelatif-second3left img {
+    max-width: 96%;
+    position: relative;
+    left: 0rem;
+    top: -7rem;
   }
   .m-wrap.realisation .coverrelatif2 > img {
     width: 109%;
@@ -3033,7 +3055,7 @@ footer .l-footer .section__footer--right .btn--footer {
   font-size: 1.2rem;
 }
 
-.grid-containerAmoi2 {
+.grid-containerAmoi2, .grid-containerAmoi3 {
   display: grid;
   grid-template-columns: 5% 20% 10% 15% 30% 20%;
   font-size: 1.2rem;
@@ -3194,8 +3216,19 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 1/6;
   }
 
+  .item-31 {
+    grid-column: 4/7;
+    grid-row: 1/2;
+    text-align: right;
+  }
+
   .item-22 {
     grid-column: 2/5;
+    grid-row: 2/3;
+  }
+
+  .item-32 {
+    grid-column: 5/7;
     grid-row: 2/3;
   }
 
@@ -3203,6 +3236,11 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 5/7;
     grid-row: 2/3;
     margin-top: 1rem;
+  }
+
+  .item-33 {
+    grid-column: 1/6;
+    padding-top: 11rem;
   }
 
   .item-24 {
@@ -3214,14 +3252,29 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-top: -2rem;
   }
 
+  .item-34 {
+    margin-top: 34.9rem;
+  }
+
   .item-26 {
     grid-column: 1/3;
     grid-row: 3/5;
   }
 
+  .item-36 {
+    grid-column: 1/4;
+    grid-row: 4/6;
+  }
+
   .item-27 {
     margin-top: 1rem;
     padding-left: 1.5rem;
+  }
+
+  .item-37 {
+    grid-column: 3/6;
+    grid-row: 5/6;
+    margin-left: 1.7rem;
   }
 }
 /* version petite tablette xs 600px */
