--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -7,11 +7,13 @@
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
   font-size: 1.2rem;
 }
-.grid-containerAmoi2 {
+.grid-containerAmoi2, .grid-containerAmoi3 {
   display: grid;
   grid-template-columns: 5% 20% 10% 15% 30% 20%;
   font-size: 1.2rem;
 }
+
+
 .grid-containerAmoi, .grid-containerAmoi2, .grid-containerAmoi3 {
   padding-left: 0.8rem;
 }
@@ -165,14 +167,29 @@
   .item-21 {
     grid-column: 1/6;
   }
+  .item-31 {
+    grid-column: 4 / 7;
+    grid-row: 1 / 2;
+    text-align: right;
+
+  }
+
   .item-22 {
     grid-column: 2 / 5;
+    grid-row: 2 / 3;
+  }
+  .item-32 {
+    grid-column: 5 / 7;
     grid-row: 2 / 3;
   }
   .item-23 {
     grid-column: 5/7;
     grid-row: 2/3;
     margin-top: 1rem;
+  }
+  .item-33{
+    grid-column: 1/6;
+    padding-top: 11rem;
   }
   .item-24 {
     grid-column: 4 / 7;
@@ -183,13 +200,25 @@
       margin-top: -2rem;
     }
   }
+  .item-34{
+    margin-top: 34.9rem;
+  }
   .item-26 {
     grid-column: 1 / 3;
     grid-row: 3 / 5;
   }
+  .item-36{
+    grid-column: 1 / 4;
+    grid-row: 4/6;
+  }
   .item-27 {
     margin-top: 1rem;
     padding-left: 1.5rem;
+  }
+  .item-37 {
+    grid-column: 3 / 6;
+    grid-row: 5 / 6;
+    margin-left: 1.7rem;
   }
 
 }
