--- a/css/screen.css
+++ b/css/screen.css
@@ -2665,6 +2665,12 @@ footer .l-footer .section__footer--right .btn--footer {
   left: -2rem;
   top: 0rem;
 }
+.m-wrap.realisation .backimage3 {
+  width: 70%;
+}
+.m-wrap.realisation .backimage3 > img {
+  width: 40%;
+}
 .m-wrap.realisation .coverimage {
   position: relative;
   left: -2.1rem;
