--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -68,6 +68,12 @@
   left: -2rem;
   top: 0rem;
 }
+.backimage3 {
+  width: 70%;
+}
+.backimage3 > img{
+  width: 40%;
+}
 
   .coverimage {
     position: relative;
